
2009-08-17
Initial Project in ajcodekatas
BindingEnvironment
ICommand
SetVariableCommand
CompositeCommand
IExpression
ConstantExpression, VariableExpression

2009-08-18
Predicates.IsFalse, .IsTrue w/tests

2009-08-19
IfCommand
BinaryExpression, ArithmeticBinaryExpression
UnaryExpression, ArithmeticUnaryExpression

2009-08-20
WhileCommand
ForEachCommand
BindingEnvironment with parent